feat!: implemented home page

--- a/src/global.css
+++ b/src/global.css
@@ -1,7 +1,28 @@
+:root {
+  --color-primary: #FD377E;
+  --color-primary-2: #E34981;
+  --color-secondary: #03B898;
+  --grey-4: #212529;
+  --grey-3: #868E96;
+  --grey-2: #E9ECEF;
+  --grey-1: #F8F9FA;
+
+  --inner-width: 61.375rem;
+}
+
 * {
   box-sizing: border-box;
 }
 
 button {
   cursor: pointer;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
 }
