--- a/src/components/ListFilter/style.css
+++ b/src/components/ListFilter/style.css
@@ -21,8 +21,18 @@
   transition: all 0.2s;
 }
 
+.filter__option--selected {
+  background: var(--color-primary);
+  color: #FFF;
+}
+
 .filter__option:hover {
   background: var(--grey-3);
+  color: var(--grey-1);
+}
+
+.filter__option--selected:hover {
+  background: var(--color-primary-2);
   color: var(--grey-1);
 }
 
