feat: empty list message

--- a/src/components/TotalMoney/style.css
+++ b/src/components/TotalMoney/style.css
@@ -9,6 +9,10 @@
   justify-content: space-between;
 }
 
+.total--hidden {
+  display: none;
+}
+
 .total__title {
   margin-bottom: 0.5rem;
   font: 700 1rem 'Nunito', sans-serif;
