--- a/src/components/EmptyCard/style.css
+++ b/src/components/EmptyCard/style.css
@@ -21,3 +21,9 @@
   height: 0.8125rem;
   background: var(--grey-2);
 }
+
+@media only screen and (max-width: 480px) {
+  .top-rectangle {
+    width: 60%;
+  }
+}
