--- a/src/components/Form/style.css
+++ b/src/components/Form/style.css
@@ -86,3 +86,21 @@
   background: var(--color-primary-2);
   color: var(--grey-1);
 }
+
+@media only screen and (max-width: 830px) {
+  .form {
+    width: unset;
+  }
+
+  .amount-wrapper,
+  .type-wrapper {
+    width: 40%;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .amount-wrapper,
+  .type-wrapper {
+    width: 48%;
+  }
+}
