--- a/src/global.css
+++ b/src/global.css
@@ -18,6 +18,10 @@ button {
   cursor: pointer;
 }
 
+figcaption {
+  display: none;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -25,4 +29,10 @@ input::-webkit-inner-spin-button {
 
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+@media only screen and (max-width: 480px) {
+  html {
+    font-size: 87.5%;
+  }
 }
