--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -3,6 +3,12 @@
   background: var(--grey-1);
   border-radius: 0.25rem;
   border-left: 0.25rem solid var(--grey-2);
+  transition: all 0.2s;
+}
+
+.list-item:hover {
+  background: #FFF;
+  box-shadow: 0px 4px 42px -12px rgba(0, 0, 0, 0.25);
 }
 
 .list-item--income {
