--- a/src/components/Form/style.css
+++ b/src/components/Form/style.css
@@ -21,9 +21,16 @@
   padding: 0.8375rem 1rem;
   background: var(--grey-1);
   font: 400 1rem 'Inter', sans-serif;
-  border: none;
+  border: 2px solid var(--grey-1);
   border-radius: 0.5rem;
   color: var(--grey-3);
+}
+
+.form__description:focus {
+  background: #FFF;
+  outline: none;
+  border-color: var(--grey-4);
+  color: var(--grey-4);
 }
 
 .form__example {
@@ -50,22 +57,61 @@
 .type-wrapper {
   width: 9.375rem;
   float: right;
+  position: relative;
+}
+
+.type-wrapper::after {
+  content: '';
+  width: 0.4rem;
+  height: 0.4rem;
+  box-shadow: 2px 2px 1px 1px var(--grey-3);
+  position: absolute;
+  top: 2.75rem;
+  right: 1rem;
+  transform: rotate(45deg);
 }
 
 .form__amount,
 .form__type {
   width: 100%;
   background: var(--grey-1);
-  border: none;
+  border: 1.2px solid var(--grey-1);
+  border-radius: 0.5rem;
   padding: 0.6875rem 1rem;
   color: var(--grey-3);
+}
+
+.form__amount {
+  font: 400 1rem 'Inter', sans-serif;
+}
+
+.form__amount:focus,
+.form__type:focus {
+  border-color: var(--grey-4);
+  color: var(--grey-4);
+  outline: none;
+}
+
+.form__type {
+  font: 400 0.75rem 'Inter', sans-serif;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+.form__type option {
+  background-color: var(--grey-1);
+  color: var(--grey-3);
+}
+
+.form__type::-ms-expand {
+  display: none;
 }
 
 .amount-wrapper::after {
   content: 'R$';
   color: var(--grey-3);
   position: absolute;
-  top: 2.5rem;
+  top: 2.7rem;
   right: 1rem;
 
   font: 400 1rem 'Inter', sans-serif;
